# oasis-sim-av

./: .gitignore  CLAUDE.md  README.md  SIM_RATIONALE.md  pyproject.toml
.swarm/: BOOTSTRAP.md  context.md  memory.md  queue.md  state.md
scenarios/: curved_road.yaml  police_tape_cautious.yaml  police_tape_heavy_rain.yaml  police_tape_rain.yaml
src/oasis_sim_av/: __init__.py  bev.py  camera.py  cloth.py  config.py  detect.py  fusion.py  geometry.py  lidar.py  noise.py  overlays.py  rain.py  render_video.py  run.py  vehicle.py  viz.py  world.py
tests/: test_bev.py  test_bezier_and_shadows.py  test_bicycle.py  test_cautious_control.py  test_cloth.py  test_detect.py  test_fusion.py  test_geometry.py  test_lidar.py  test_overlays.py  test_rain.py  test_render_video.py  test_run.py
