[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oasis-sim-av"
version = "0.1.0"
description = "Lightweight Python simulator for autonomous-driving sensor-fusion edge cases (LiDAR + camera failure on thin fluttering objects)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Oasis X" }]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",
    "pillow>=10.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
oasis-sim-av = "oasis_sim_av.run:main"
oasis-sim-av-render-video = "oasis_sim_av.render_video:main"
oasis-sim-av-fuse = "oasis_sim_av.fusion:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
